--- a/detail.html
+++ b/detail.html
@@ -8,10 +8,34 @@
 <p>Header Div</p>
 </div>
 <div class="Contenet Div">
-<p> Content Div</p>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" />
+    <a href="payment.html" target="_blank"><p>Book Now</p></a>
+    <h2>Radison Hotel</h2>
+    <h5>Rating</h5>
+    <p>5 Star</p>
+    <h5>AMENITIES</h5>
+    <ul type="circle">
+        <li>Room Service</li>
+        <li>Restaurant</li>
+        <li>Business Center</li>
+        <li>Fitness Center</li>
+        <li>Pool</li>
+    </ul>
+    <h5>Description</h5>
+    <p>The hotel has a variety of rooms link luxury, single, Economy and Business rooms. The room rent includes all the amenities free which means  you will get the meal as well within the same money.</p>
 </div>
 <div class="Footer Div">
 <p> Footer Div</p>
+    <div>
+        <a href="index.html" target="_same"> view more >></a>
+        </br>
+        <a href="contact.html" target="_blank">Contact us</a>
+    </div>
+    <span>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+        </span>
 </div>
 </div>
 <body>
