--- a/index.html
+++ b/index.html
@@ -5,14 +5,35 @@
 <body>
 <div>
 <div class="Header Div">
-<img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
+<img src="assests/images/logo.png" alt="logo" height="200" width="150" />
+<a href="login.html" target="_blank">Login</a>
 <p>Header Div</p>
+<div>Search bar
+</div>
+<div>
+<span>
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300" width="300" />
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300" width="300" />
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" height="300" width="300" />
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" height="300" width="300" />
+</span>
+</div>
 </div>
 <div class="Contenet Div">
 <p> Content Div</p>
 </div>
 <div class="Footer Div">
 <p> Footer Div</p>
+    <div>
+        <a href="index.html" target="_same"> view more >></a>
+        </br>
+        <a href="contact.html" target="_blank">Contact us</a>
+    </div>
+    <span>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+        </span>
 </div>
 </div>
 </body>
