--- a/list.html
+++ b/list.html
@@ -4,14 +4,55 @@
 </head>
 <div>
 <div class="Header Div">
-<img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
+    <img src="assests/images/logo.png" alt="logo" height="200" width="150" />
 <p>Header Div</p>
+    <a href="list.html">Login</a>
+    <br/>
+    <a href="list.html">Map View</a>
 </div>
+    <hr/>
+
 <div class="Contenet Div">
+    <a href="detail.html">
+   <div>
+<img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"  />
+       <h3>Radison</h3>
+       <p>5.0</p>
+       <p>New Delhi</p>
+    </div>
+    </a>
+    <div>
+
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" />
+        <h3>the Lalit New hotel</h3>
+        <p>5.0</p>
+        <p>New Delhi</p>
+
+    </div>
+    <div>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" />
+        <h3>Taj Hotel</h3>
+        <p>4.0</p>
+        <p>New Delhi</p>
+    </div>
+    <div>
+        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" />
+        <p>Map View </p>
 <p> Content Div</p>
 </div>
+    <hr/>
 <div class="Footer Div">
 <p> Footer Div</p>
+    <div>
+        <a href="index.html" target="_same"> view more >></a>
+        </br>
+        <a href="contact.html" target="_blank">Contact us</a>
+    </div>
+    <span>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+        </span>
 </div>
 </div>
 <body>
