--- a/payment.html
+++ b/payment.html
@@ -5,13 +5,36 @@
 <div>
 <div class="Header Div">
 <img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
-<p>Header Div</p>
+<a href="login.html"><p>Login</p></a>
+    <p>Header Div</p>
 </div>
+    <hr/>
 <div class="Contenet Div">
-<p> Content Div</p>
+    <img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
+    <p>Header Div</p>
+</div>
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" />
+    <h2>Radisson Blu Hotel</h2>
+    <p>#38 of 1,289 hotels in new Delhi</p>
+    <p>Name : John Doe</p>
+    <p>Number of Adults : 2</p>
+    <p> Check-in Date : 06/06/2020</p>
+    <p>Tariff BreakDown : Rs 1000 &#215 2 Adults &#215 5 Nights</p>
+    <p>Total Amount : Rs10000</p>
 </div>
 <div class="Footer Div">
+    </hr>
 <p> Footer Div</p>
+    <div>
+        <a href="payment.html" target="_same"> Pay Now>></a>
+        </br>
+        <a href="contact.html" target="_blank">Contact us</a>
+    </div>
+    <span>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+        </span>
 </div>
 </div>
 <body>
