--- a/contact.html
+++ b/contact.html
@@ -1,74 +1,17 @@
+<!DOCTYPE HTML>
 <Html>
 <head>
     <title>Login</title>
 </head>
 <div>
-    <img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
-    <p>Login</p>
-    <table align="center" border=" dashed 1px" bgcolor="Red">
-        <thead bgcolor="black">
-        <tr>
-            Name
-        </tr>
-        <tr>
-            Place
-        </tr>
-        <tr>
-           email
-        </tr>
-        <tr>
-            is good?
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td align="right" bgcolor="Ornage">
-                Aravind
-            </td>
-            <td>
-                Narasaraopet
-            </td>
-            <td>
-                Upputuriaravindbabu@gmail.com
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Aravind
-            </td>
-            <td>
-                Narasaraopet
-            </td>
-            <td>
-                Upputuriaravindbabu@gmail.com
-            </td>
-            <td rowspan="2" bgcolor="yellow"> Yes </td>
-        </tr>
-        <tr>
-            <td>
-                Aravind
-            </td>
-            <td>
-                Narasaraopet
-            </td>
-            <td colspan="2">
-                Upputuriaravindbabu@gmail.com
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Aravind
-            </td>
-            <td>
-                Narasaraopet
-            </td>
-            <td>
-                Upputuriaravindbabu@gmail.com
-            </td>
-        </tr>
-
-        </tbody>
-    </table>
+    <p> Thank you for reaching out!!!!</p>
+    <p>Please enter you'r email and we will get back to you soon:</p>
+    <form action="index.html">
+<input type="text" placeholder="Enter your mail" required>
+    <button formaction="index.html">Submit</button>
+    </form>
+    
+<p> Contact Us</p>
 </div>
 <body>
 </body>
