--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <Html>
 <head>
 <title> Index</title>
@@ -8,7 +9,8 @@
 <img src="assests/images/logo.png" alt="logo" height="200" width="150" />
 <a href="login.html" target="_blank">Login</a>
 <p>Header Div</p>
-<div>Search bar
+<div>
+    <input type="text" placeholder="City" >
 </div>
 <div>
 <span>
