--- a/list.html
+++ b/list.html
@@ -1,10 +1,12 @@
+<!DOCTYPE HTML>
 <Html>
 <head>
 <title> List</title>
 </head>
 <div>
 <div class="Header Div">
-    <img src="assests/images/logo.png" alt="logo" height="200" width="150" />
+    <a href="index.html">
+    <img src="assests/images/logo.png" alt="logo" height="200" width="150" /></a>
 <p>Header Div</p>
     <a href="list.html">Login</a>
     <br/>
