--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <Html>
 <head>
 <title>Login</title>
@@ -6,5 +7,26 @@
 <p> Login</p>
 </div>
 <body>
-</bpdy>
+<div>
+    <div class="header">
+        <form  action="index.html" method="get">
+        <label for="name" >User Name:</label>
+<input type="text" id="name" required placeholder="user name" required>
+        <br/>
+        <label for="password">Password:</label>
+        <input type="password" id="password"  placeholder="password" required>
+        <br/>
+            <button type="submit" formaction="index.html"> submit </button>
+
+    </div>
+    </hr>
+    <div class="Body">
+
+    </div>
+    </hr>
+    <div class="Footer">
+
+    </div>
+</div>
+</body>
 </html>
