--- a/detail.html
+++ b/detail.html
@@ -1,15 +1,16 @@
 <!DOCTYPE HTML>
 <Html>
 <head>
+    <link rel="stylesheet"  type="text/css" href="styles/detail.css"/>
 <title> Details</title>
 </head>
-<div>
-<div class="Header Div">
-<img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
-<p>Header Div</p>
-</div>
-<div class="Contenet Div">
-    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" />
+<header class="Header">
+    <a href="index.html"><img src="assests/images/logo.png" alt="logo" height="60px" width="60px" /></a>
+    <a href="index.html" >Login</a>
+</header>
+<body class="body">
+<container class="Content">
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height=500px width=500px />
     <form action="">
         <label for="adults">Adults :</label>
         <input type="text" id="adults"  min="1" required>
@@ -41,9 +42,10 @@
     </ul>
     <h5>Description</h5>
     <p>The hotel has a variety of rooms link luxury, single, Economy and Business rooms. The room rent includes all the amenities free which means  you will get the meal as well within the same money.</p>
-</div>
-<div class="Footer Div">
-<p> Footer Div</p>
+</container>
+
+<footer class="Footer">
+
     <div>
         <a href="index.html" target="_same"> view more >></a>
         </br>
@@ -54,8 +56,6 @@
         <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
      <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
         </span>
-</div>
-</div>
-<body>
-</bpdy>
+</footer>
+</body>
 </html>
