--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE HTML>
 <Html>
 <head>
+    <link rel="stylesheet" type="text/css"  href="styles/index.css"/>
 <title> Index</title>
 </head>
-<body>
-<div>
-<div class="Header Div">
-<img src="assests/images/logo.png" alt="logo" height="200" width="150" />
+<body class="body">
+
+<header id="header">
+<img src="assests/images/logo.png" alt="logo" height=60px width=60px />
 <a href="login.html" target="_blank">Login</a>
-<p>Header Div</p>
-<div>
+</header>
+<container class="Content">
+<div id="searchbar">
     <input type="text" placeholder="City" >
 </div>
-<div>
-<span>
-<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="300" width="300" />
-<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="300" width="300" />
-<img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" height="300" width="300" />
-<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" height="300" width="300" />
+<div align="center">
+    </br>
+    </br>
+    </br>
+<span >
+<a href="list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" height="150px" width="150px" /></a>
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" height="150px" width="150px" />
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" height="150px" width="150px" />
+<img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" height="150px" width="150px" />
 </span>
 </div>
-</div>
-<div class="Contenet Div">
-<p> Content Div</p>
-</div>
-<div class="Footer Div">
-<p> Footer Div</p>
+    </br>
+    </br>
+    </br>
+</container>
+<footer class="footer">
     <div>
         <a href="index.html" target="_same"> view more >></a>
         </br>
@@ -36,7 +40,6 @@
         <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
      <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
         </span>
-</div>
-</div>
+</footer>
 </body>
-</html>
+</html>    
