--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </div>
 <body>
 <div>
-    <div class="header">
+    <div class="header" color="red">
         <form  action="index.html" method="get">
         <label for="name" >User Name:</label>
 <input type="text" id="name" required placeholder="user name" required>
@@ -17,7 +17,6 @@
         <input type="password" id="password"  placeholder="password" required>
         <br/>
             <button type="submit" formaction="index.html"> submit </button>
-
     </div>
     </hr>
     <div class="Body">
