--- a/payment.html
+++ b/payment.html
@@ -1,20 +1,16 @@
 <!DOCTYPE HTML>
 <Html>
 <head>
+    <link rel="stylesheet" type="text/css"  href="styles/payment.css"/>
 <title> Payment</title>
 </head>
-<div>
-<div class="Header Div">
-<img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
+<body class="body">
+<header class="Header Div">
+<a href="index.html"><img src="assests/images/logo.png" alt="logo" height="60px" width="60px" /></a>
 <a href="login.html"><p>Login</p></a>
-    <p>Header Div</p>
-</div>
-    <hr/>
-<div class="Contenet Div">
-    <img src="C:\Users\upput\IdeaProjects\Hotel_Booking_Website_Starter_Code\assests\images\logo.png" alt="logo" height="200" width="150" />
-    <p>Header Div</p>
-</div>
-    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" />
+</header>
+<container class="Content">
+    <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="500px" width="500px" />
     <h2>Radisson Blu Hotel</h2>
     <p>#38 of 1,289 hotels in new Delhi</p>
     <p>Name : John Doe</p>
@@ -22,13 +18,11 @@
     <p> Check-in Date : 06/06/2020</p>
     <p>Tariff BreakDown : Rs 1000 &#215 2 Adults &#215 5 Nights</p>
     <p>Total Amount : Rs10000</p>
-</div>
-<div class="Footer Div">
-    </hr>
-<p> Footer Div</p>
+    <a href="payment.html" target="_same"> Pay Now>></a>
+</container>
+</body>
+<footer class="Footer">
     <div>
-        <a href="payment.html" target="_same"> Pay Now>></a>
-        </br>
         <a href="contact.html" target="_blank">Contact us</a>
     </div>
     <span>
@@ -36,8 +30,6 @@
         <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
      <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
         </span>
-</div>
-</div>
-<body>
-</bpdy>
+</footer>
+
 </html>
