--- a/list.html
+++ b/list.html
@@ -1,62 +1,58 @@
 <!DOCTYPE HTML>
 <Html>
 <head>
+    <link rel="stylesheet"  type="text/css" href="styles/list.css"/>
 <title> List</title>
 </head>
-<div>
-<div class="Header Div">
+<body class="body">
+<header class="header">
     <a href="index.html">
-    <img src="assests/images/logo.png" alt="logo" height="200" width="150" /></a>
-<p>Header Div</p>
-    <a href="list.html">Login</a>
-    <br/>
-    <a href="list.html">Map View</a>
-</div>
-    <hr/>
+    <img src="assests/images/logo.png" alt="logo" height="60px" width="60px" /></a>
+    <a href="login.html">Login</a>
+</header>
+<container class="Contenet">
 
-<div class="Contenet Div">
+    <ul>
+        <li> <a href="list.html">List View</a></li>
+        <li> <a href="list.html">Map View</a></li>
+    </ul>
     <a href="detail.html">
-   <div>
-<img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg"  />
+   <div class="image1">
+<img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" height="250px" width="250px" />
        <h3>Radison</h3>
        <p>5.0</p>
        <p>New Delhi</p>
     </div>
     </a>
-    <div>
+    <div class="image2">
 
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" />
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" height="250px" width="250px"/>
         <h3>the Lalit New hotel</h3>
         <p>5.0</p>
         <p>New Delhi</p>
 
     </div>
-    <div>
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" />
+    <div class="image3">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" height="250px" width="250px" />
         <h3>Taj Hotel</h3>
         <p>4.0</p>
         <p>New Delhi</p>
-    </div>
-    <div>
+        </div>
+        <div class="image4">
         <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" />
-        <p>Map View </p>
-<p> Content Div</p>
-</div>
-    <hr/>
-<div class="Footer Div">
-<p> Footer Div</p>
+    </div>
+</container>
+<footer class="footer">
     <div>
         <a href="index.html" target="_same"> view more >></a>
         </br>
         <a href="contact.html" target="_blank">Contact us</a>
     </div>
     <span>
-    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
-        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
-     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20px" width="22px" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20px" width="22px" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20px" width="22px" /></a>
         </span>
-</div>
-</div>
-<body>
-</bpdy>
-</html>
+</footer>
+</body>
+</Html>
