--- a/loader.html
+++ b/loader.html
@@ -1,11 +1,27 @@
 <!DOCTYPE HTML>
 <Html>
-<head>
+<head><link rel="stylesheet" type="text/css"  href="styles/detail.css"/>
 <title>Loader</title>
 </head>
-<div>
-<p> loader</p>
-</div>
-<body>
-</bpdy>
+<header class="header">
+    <a href="index.html"><img src="assests/images/logo.png" alt="logo" height="60px" width="60px" /></a>
+    <a href="index.html" >Login</a>
+</header>
+<body class="body">
+<container>
+
+</container>
+<footer class="footer">
+    <div>
+        <a href="index.html" target="_same"> view more >></a>
+        </br>
+        <a href="contact.html" target="_blank">Contact us</a>
+    </div>
+    <span>
+    <a href="https://www.facebook.com/"><img src="assests/images/facebook.png" height="20" width="22" /></a>
+        <a href="https://www.instagram.com/"><img src="assests/images/instagram.png" height="20" width="22" /></a>
+     <a href="https://twitter.com/"><img src="assests/images/twitter.png" height="20" width="22" /></a>
+        </span>
+</footer>
+</body>
 </html>
